Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45177

[OSX][Qt 5.5 alpha] QBluetoothSocketPrivate::writeData(const char *, qint64) not implemented

    XMLWordPrintable

Details

    • macOS

    Description

      QBluetoothSocketPrivate::writeData(const char *, qint64) does not appear to be implemented in Qt 5.5 Alpha under OS X.

      When QBluetoothSocket::write(const QByteArray &data;) is called the following is printed to the console:

       
      QMetaObject::invokeMethod: 
      No such method QBluetoothSocketPrivateBase::qint64 QBluetoothSocketPrivate::writeData(const char *, qint64)() 
      

      Attachments

        For Gerrit Dashboard: QTBUG-45177
        # Subject Branch Project Status CR V

        Activity

          People

            tpochep Timur Pocheptsov
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes